--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 *.tmp export-ignore
 *.old export-ignore
 tmp export-ignore
+hold export-ignore
 bodytxt export-ignore
 preview.png export-ignore
 .gitignore export-ignore
